--- a/About.html
+++ b/About.html
@@ -4,14 +4,14 @@
 <head>
     <title>About Us</title>
     <link href="style.css" rel="stylesheet">
+    <link href="darktheme.css" rel="stylesheet">
+    <link href="responsive.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/SVS LOGO OFFICIAL.svg">
+    <link rel="icon" href="images/SVS LOGO OFFICIAL.svg">
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
-    <meta 
-     name='viewport' 
-     content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' 
-/>
+    <meta  name='viewport'  content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
 </head>
+
 <header class="main-bar">
     <a href="index.html"><i class="fas fa-home"></i></i></a>
     <a href="services.html"><i class="fas fa-icons"></i></a>
@@ -21,7 +21,7 @@
 <body>
 
     <section id="namesection" class="namesection">
-        <img id="logosvs" class="logo" src="img/SVS LOGO OFFICIAL.svg" alt="LOGO" >
+        <img id="logosvs" class="logo" src="images/SVS LOGO OFFICIAL.svg" alt="LOGO" >
         <h1 id="header" >Stupid Version Studio</h1>
     </section>
 
@@ -59,7 +59,7 @@
         <source src="https://www.youtube.com/embed/p4_AmyndTcA"
                 type="video/link">
 
-        <source src="VIDEO/STUPID.mp4"
+        <source src="videos/STUPID.mp4"
                 type="video/mp4">
 
        
