--- a/services.html
+++ b/services.html
@@ -4,13 +4,12 @@
 <head>
     <title>Our Services</title>
     <link href="style.css" rel="stylesheet">
+    <link href="darktheme.css" rel="stylesheet">
+    <link href="responsive.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/SVS LOGO OFFICIAL.svg">
+    <link rel="icon" href="images/SVS LOGO OFFICIAL.svg">
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
-    <meta 
-     name='viewport' 
-     content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' 
-/>
+    <meta  name='viewport'  content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
 </head>
 
 <body>
@@ -28,7 +27,7 @@
     <section class="bloc">
         <h2 class="subheading"><i class="fas fa-music"></i> DJ S And Sons(France)</h2>
         <div class="ad-service">
-            <img class="img-service" src="img/djs.jpg" alt="dj">
+            <img class="img-service" src="images/djs.jpg" alt="dj">
             <div class="text-service">
                 <h3>DJ based on france</h3>
                 <h4> (Tamil , English , French )</h4>
@@ -48,7 +47,7 @@
     <section class="bloc">
         <h2 class="subheading"><i class="fas fa-truck"></i> S and Sons Transport</h2>
         <div class="ad-service">
-            <img class="img-service" src="img/sandsonstransport.jpeg" alt="sandsons transport">
+            <img class="img-service" src="images/sandsonstransport.jpeg" alt="sandsons transport">
             <div class="text-service">
                 <h3>Transport Company based on france</h3>
                 <a href="tel:0033767717431">
