--- a/web/ny.html
+++ b/web/ny.html
@@ -17,7 +17,7 @@
       <h3>Hi! I Wish you </h3>
       <h2>Happy New Year 2020</h2>
       <div class="greeting"><h1></h1></div>
-      <img class="cen" src="../img/nw2019.png" alt="new year 2019">
+      <img class="cen" src="../images/nw2019.png" alt="new year 2019">
 
 
 
