--- a/web/tamil.html
+++ b/web/tamil.html
@@ -20,7 +20,7 @@
       <h2>இனிய தமிழ் புத்தாண்டு
           <br>நல் வாழ்த்துகள்</h2>
       <div class="greeting"><h1></h1></div>
-      <img class="cen" src="../img/tny.png"  alt="tamil new year" />
+      <img class="cen" src="../images/tny.png"  alt="tamil new year" />
 
 
 
