--- a/web/x-mas.html
+++ b/web/x-mas.html
@@ -17,7 +17,7 @@
       <h3>Hi!I Wish you </h3>
       <h2>Merry Christmas</h2>
       <div class="greeting"><h1></h1></div>
-      <img class="cen" src="../img/xxxx.gif" alt="01">
+      <img class="cen" src="../images/xxxx.gif" alt="01">
 
 
 
