--- a/About.html
+++ b/About.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>About Us</title>
+    <title>About Stupid Version</title>
     <link href="style.css" rel="stylesheet">
     <link href="darktheme.css" rel="stylesheet">
     <link href="responsive.css" rel="stylesheet">
