--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
 
 
     <section class="bloc">
-        <h2 class="subheading"><i class="fas fa-music"></i> DJ S And Sons(France)</h2>
+        <h2 class="subheading"><i class="fas fa-music"></i> DJ S And Sons</h2>
         <div class="ad-service">
             <img class="img-service" src="images/djs.jpg" alt="dj">
             <div class="text-service">
@@ -45,7 +45,7 @@
     </section>
 
     <section class="bloc">
-        <h2 class="subheading"><i class="fas fa-truck"></i> S and Sons Transport</h2>
+        <h2 class="subheading"><i class="fas fa-truck"></i> SandSons Transport</h2>
         <div class="ad-service">
             <img class="img-service" src="images/sandsonstransport.jpeg" alt="sandsons transport">
             <div class="text-service">
