--- a/services.html
+++ b/services.html
@@ -32,13 +32,13 @@
                 <h3>DJ based on france</h3>
                 <h4> (Tamil , English , French )</h4>
                 <a href="tel:0033767717431">
-                    <h3 class="btn"><i class="fas fa-phone-square-alt"></i> To call</h3>
+                    <h3 class="btn">call</h3>
                 </a>
                 <a href="tel:0033767460955">
-                    <h3 class="btn"><i class="fas fa-phone-square-alt"></i> To call</h3>
+                    <h3 class="btn">call</h3>
                 </a>
                 <a href="https://www.instagram.com/djsandsons/">
-                    <h3 class="btn"><i class="fab fa-instagram"></i> Instragram</h3>
+                    <h3 class="btn">Instragram</h3>
                 </a>
             </div>
         </div>
@@ -51,10 +51,10 @@
             <div class="text-service">
                 <h3>Transport Company based on france</h3>
                 <a href="tel:0033767717431">
-                    <h3 class="btn"><i class="fas fa-phone-square-alt"></i> To call</h3>
+                    <h3 class="btn">call</h3>
                 </a>
                 <a href="tel:0033767460955">
-                    <h3 class="btn"><i class="fas fa-phone-square-alt"></i> To call</h3>
+                    <h3 class="btn">call</h3>
                 </a>
             </div>
         </div>
