--- a/About.html
+++ b/About.html
@@ -11,12 +11,13 @@
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
     <meta  name='viewport'  content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
 </head>
-
-<header class="main-bar">
-    <a href="index.html"><i class="fas fa-home"></i></i></a>
+<div id="mainbar"  class="main-bar">
+    <a href="index.html"><i class="fas fa-home"></i></a>
+    <a href="wallpapers.html"><i class="fas fa-mobile"></i></a>
     <a href="services.html"><i class="fas fa-icons"></i></a>
     <a href="About.html"><i class="far fa-user-circle"></i></a>
-</header>
+    
+</div>
 
 <body>
 
