--- a/wallpapers.html
+++ b/wallpapers.html
@@ -22,10 +22,30 @@
 <body>
 <section class="wallpapersection">
 
+    <div class="wpbloc">
+        <img src="wp/1.jpg" alt="1">
+        <a href="wp/1.jpg" download="wp1">
+            <h3 class="btn">Download</h3>
+        </a>
+    </div>
 
     <div class="wpbloc">
-        <img src="wp/svs.jpg" alt="1">
-        <a href="wp/svs.jpg" download="wp1">
+        <img src="wp/2.png" alt="2">
+        <a href="wp/2.png" download="wp2">
+            <h3 class="btn">Download</h3>
+        </a>
+    </div>
+
+    <div class="wpbloc">
+        <img src="wp/3.png" alt="3">
+        <a href="wp/3.png" download="wp3">
+            <h3 class="btn">Download</h3>
+        </a>
+    </div>
+
+    <div class="wpbloc">
+        <img src="wp/4.png" alt="4">
+        <a href="wp/4.png" download="wp4">
             <h3 class="btn">Download</h3>
         </a>
     </div>
