--- a/wallpapers.html
+++ b/wallpapers.html
@@ -11,16 +11,17 @@
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
     <meta  name='viewport'  content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
 </head>
-<div id="mainbar"  class="main-bar">
+<header id="mainbar"  class="main-bar">
     <a href="index.html"><i class="fas fa-home"></i></a>
     <a href="wallpapers.html"><i class="fas fa-mobile"></i></a>
     <a href="services.html"><i class="fas fa-icons"></i></a>
     <a href="About.html"><i class="far fa-user-circle"></i></a>
     
-</div>
+</header>
 
 <body>
 <section class="wallpapersection">
+    <h2 class="subheading"> Wallpapers</h2>
 
     <div class="wpbloc">
         <img src="wp/1.jpg" alt="1">
