--- a/wallpapers.html
+++ b/wallpapers.html
@@ -51,6 +51,21 @@
         </a>
     </div>
 
+    <div class="wpbloc">
+        <img src="wp/5.png" alt="5">
+        <a href="wp/5.png" download="wp5">
+            <h3 class="btn">Download</h3>
+        </a>
+    </div>
+
+
+    <div class="wpbloc">
+        <img src="wp/6.png" alt="6">
+        <a href="wp/6.png" download="wp6">
+            <h3 class="btn">Download</h3>
+        </a>
+    </div>
+
   
 
 </section>
