--- a/index.html
+++ b/index.html
@@ -94,18 +94,35 @@
         <section class="bloc">
             <h2 class="subheading"><i class="fab fa-instagram"></i>Instagram Filters</h2>
             
+
+            <div class="sale">
+                <div class="pot">
+                    <img class="log" src="images/bigil.png">
+                </div>
+                <div class="detailes">
+                    <h3 class="line">Bigil</h3>
+                    <h4>Filter by Us</h4>
+                    <a href="https://www.instagram.com/a/r/?effect_id=603678986832523">
+                        <h3 class="btn">Try It</h3>
+                    </a>
+                </div>
+            </div>
+
             <div class="sale">
                 <div class="pot">
                     <img class="log" src="images/bighead.png">
                 </div>
                 <div class="detailes">
-                    <h3 class="line">Big Head</h3>
+                    <h3 class="line">Bigie</h3>
                     <h4>Filter by Us</h4>
                     <a href="https://www.instagram.com/a/r/?effect_id=2431084013883394">
                         <h3 class="btn">Try It</h3>
                     </a>
                 </div>
             </div>
+
+
+
 
 
 
