--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Stupid Version Studio</title>
+    <script data-ad-client="ca-pub-2363440232574918" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link href="style.css" rel="stylesheet">
     <link href="darktheme.css" rel="stylesheet">
     <link href="responsive.css" rel="stylesheet">
@@ -90,7 +91,7 @@
             </div>
 
         </section>
-
+        <script data-ad-client="ca-pub-2363440232574918" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <section class="bloc">
             <h2 class="subheading"><i class="fab fa-instagram"></i>Instagram Filters</h2>
             
@@ -128,7 +129,7 @@
 
         </section>
 
-
+        <script data-ad-client="ca-pub-2363440232574918" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 
 
@@ -252,6 +253,8 @@
 
 
     </section>
+
+    <script data-ad-client="ca-pub-2363440232574918" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 
 <footer>
