--- a/services.html
+++ b/services.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Our Services</title>
+    <script data-ad-client="ca-pub-2363440232574918" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link href="style.css" rel="stylesheet">
     <link href="darktheme.css" rel="stylesheet">
     <link href="responsive.css" rel="stylesheet">
@@ -47,6 +48,8 @@
         </div>
     </section>
 
+    <script data-ad-client="ca-pub-2363440232574918" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     <section class="bloc">
         <h2 class="subheading"><i class="fas fa-truck"></i> SandSons Transport</h2>
         <div class="ad-service">
@@ -62,6 +65,8 @@
             </div>
         </div>
     </section>
+
+    <script data-ad-client="ca-pub-2363440232574918" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 </body>
 <footer>
