--- a/wallpapers.html
+++ b/wallpapers.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>wallpapers</title>
+    <script data-ad-client="ca-pub-2363440232574918" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link href="style.css" rel="stylesheet">
     <link href="darktheme.css" rel="stylesheet">
     <link href="responsive.css" rel="stylesheet">
@@ -43,7 +44,7 @@
             <h3 class="btn">Download</h3>
         </a>
     </div>
-
+    <script data-ad-client="ca-pub-2363440232574918" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <div class="wpbloc">
         <img src="wp/4.png" alt="4">
         <a href="wp/4.png" download="wp4">
@@ -65,6 +66,8 @@
             <h3 class="btn">Download</h3>
         </a>
     </div>
+
+    <script data-ad-client="ca-pub-2363440232574918" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   
 
