--- a/wallpapers.html
+++ b/wallpapers.html
@@ -44,7 +44,8 @@
             <h3 class="btn">Download</h3>
         </a>
     </div>
-  
+    
+    <div class="wpbloc">
         <img src="wp/4.png" alt="4">
         <a href="wp/4.png" download="wp4">
             <h3 class="btn">Download</h3>
