--- a/wallpapers.html
+++ b/wallpapers.html
@@ -68,6 +68,21 @@
     </div>
 
 
+    <div class="wpbloc">
+        <img src="wp/7.png" alt="7">
+        <a href="wp/7.png" download="wp7">
+            <h3 class="btn">Download</h3>
+        </a>
+    </div>
+
+    <div class="wpbloc">
+        <img src="wp/8.png" alt="8">
+        <a href="wp/8.png" download="wp8">
+            <h3 class="btn">Download</h3>
+        </a>
+    </div>
+
+
   
 
 </section>
