--- a/djs.html
+++ b/djs.html
@@ -24,46 +24,32 @@
 
 
     <section class="namesection">
-        <h1>Our Services</h1>
+        <h1>S and Sons DJ <br> and Transport</h1>
     </section>
 
 
     <section class="bloc">
-        <h2 class="subheading"><i class="fas fa-music"></i> DJ S And Sons</h2>
+    
         <div class="ad-service">
             <img class="img-service" src="images/djs.jpg" alt="dj">
             <div class="text-service">
-                <h3>DJ based on france</h3>
-                <h4> (Tamil , English , French )</h4>
                 <a href="tel:0033767717431">
-                    <h3 class="btn">call</h3>
+                    <h3 class="btn">Call</h3>
                 </a>
                 <a href="tel:0033767460955">
-                    <h3 class="btn">call</h3>
+                    <h3 class="btn">Call</h3>
                 </a>
                 <a href="https://www.instagram.com/djsandsons/">
                     <h3 class="btn">Instragram</h3>
                 </a>
-            </div>
+            </div> 
         </div>
+        <h4 class="pharagraphe">Hi there! We are deejay from Paris . Working more than an year and a half . Call us for every special day of your life and 
+            we will be happily there at a comptable cost. Before you hire us make sure to see all our equipments down below.</h4>
     </section>
 
 
-    <section class="bloc">
-        <h2 class="subheading"><i class="fas fa-truck"></i> SandSons Transport</h2>
-        <div class="ad-service">
-            <img class="img-service" src="images/sandsonstransport.jpeg" alt="sandsons transport">
-            <div class="text-service">
-                <h3>Transport Company based on france</h3>
-                <a href="tel:0033767717431">
-                    <h3 class="btn">call</h3>
-                </a>
-                <a href="tel:0033767460955">
-                    <h3 class="btn">call</h3>
-                </a>
-            </div>
-        </div>
-    </section>
+
 
 
 
