--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div id="mainbar"  class="main-bar">
     <a href="index.html"><i class="fas fa-home"></i></a>
     <a href="wallpapers.html"><i class="fas fa-mobile"></i></a>
-    <a href="services.html"><i class="fas fa-icons"></i></a>
+    <a href="djs.html"><i class="far fa-play-circle"></i></a>
     <a href="About.html"><i class="far fa-user-circle"></i></a>
     
 </div>
