--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="detailes">
                     <h3 class="line">Durruk</h3>
-                    <h4>A game developed with buildbox by us and it's a casual game</h4>
+                    <h4>A Car game developed with buildbox</h4>
                     <a href="https://play.google.com/store/apps/details?id=com.stupidversion.durruk">
                         <h3 class="btn">INSTALL</h3>
                     </a>
@@ -56,26 +56,28 @@
                     <img class="log" src="images/jumpie.png">
                 </div>
                 <div class="detailes">
-                    <h3 class="line">Jumpie</h3>
-                    <h4>A game developed with buildbox by us and it's a casual game</h4>
+                    <h3 class="line">Jumpie </h3>
+                    <h4>A casual game developed with buildbox</h4>
+                    <a href="https://play.google.com/store/apps/details?id=com.stupidversion.jumpie">
+                        <h3 class="btn">INSTALL</h3>
+                    </a>
+                </div>
+            </div>
+
+
+            <div class="sale">
+                <div class="pot">
+                    <img class="log" src="images/jumpie 2.png">
+                </div>
+                <div class="detailes">
+                    <h3 class="line">Jumpie 2</h3>
+                    <h4>A casual game developed with buildbox</h4>
                     <a href="https://play.google.com/store/apps/details?id=com.stupidversion.jumpie2">
                         <h3 class="btn">INSTALL</h3>
                     </a>
                 </div>
             </div>
 
-            <div class="sale">
-                <div class="pot">
-                    <img class="log" src="images/vista.jpg">
-                </div>
-                <div class="detailes">
-                    <h3 class="line">VISTA</h3>
-                    <h4>This app will help you to Find more friends with Tamil community</h4>
-                    <a href="https://play.google.com/store/apps/details?id=vishnugopy.github.io.vista">
-                        <h3 class="btn">INSTALL</h3>
-                    </a>
-                </div>
-            </div>
 
             <div class="sale">
                 <div class="pot">
