--- a/djs.html
+++ b/djs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Our Services</title>
+    <title>S and Sons</title>
     <script data-ad-client="ca-pub-2363440232574918" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link href="style.css" rel="stylesheet">
     <link href="darktheme.css" rel="stylesheet">
@@ -44,7 +44,7 @@
                 </a>
             </div> 
         </div>
-        <h4 class="pharagraphe">Hi there! We are deejay from Paris . Working more than an year and a half . Call us for every special day of your life and 
+        <h4 class="pharagraphe">Hi there! We are tamil dj from Paris . Working more than an year and a half . Call us for every special day of your life and 
             we will be happily there at a comptable cost. Before you hire us make sure to see all our equipments down below.</h4>
     </section>
 
