--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
 
         <section class="bloc">
             <h2 class="subheading"><i class="fas fa-shapes"></i> Apps on Playstore</h2>
+
+            <div class="sale">
+                <div class="pot">
+                    <img class="log" src="images/rc logo.png">
+                </div>
+                <div class="detailes">
+                    <h3 class="line">Roller Crush</h3>
+                    <h4>A Color smashing game developed with buildbox</h4>
+                    <a href="https://play.google.com/store/apps/details?id=com.stupidversion.rollercrush">
+                        <h3 class="btn">INSTALL</h3>
+                    </a>
+                </div>
+            </div>
             
             <div class="sale">
                 <div class="pot">
