--- a/index.html
+++ b/index.html
@@ -41,12 +41,15 @@
             <div class="sale">
                 <div class="pot">
                     <img class="log" src="images/rc logo.png">
+                    <img class="getonplay" src="images/gps.png" alt="getiton" >
                 </div>
                 <div class="detailes">
                     <h3 class="line">Roller Crush</h3>
                     <h4>A Color smashing game developed with buildbox</h4>
+                    
                     <a href="https://play.google.com/store/apps/details?id=com.stupidversion.rollercrush">
                         <h3 class="btn">INSTALL</h3>
+                        
                     </a>
                 </div>
             </div>
@@ -54,6 +57,7 @@
             <div class="sale">
                 <div class="pot">
                     <img class="log" src="images/durruk.jpg">
+                    <img class="getonplay" src="images/gps.png" alt="getiton" >
                 </div>
                 <div class="detailes">
                     <h3 class="line">Durruk</h3>
@@ -67,6 +71,7 @@
             <div class="sale">
                 <div class="pot">
                     <img class="log" src="images/jumpie.png">
+                    <img class="getonplay" src="images/gps.png" alt="getiton" >
                 </div>
                 <div class="detailes">
                     <h3 class="line">Jumpie </h3>
@@ -81,6 +86,7 @@
             <div class="sale">
                 <div class="pot">
                     <img class="log" src="images/jumpie 2.png">
+                    <img class="getonplay" src="images/gps.png" alt="getiton" >
                 </div>
                 <div class="detailes">
                     <h3 class="line">Jumpie 2</h3>
@@ -95,6 +101,7 @@
             <div class="sale">
                 <div class="pot">
                     <img class="log" src="images/updown.jpg">
+                    <img class="getonplay" src="images/gps.png" alt="getiton" >
                 </div>
                 <div class="detailes">
                     <h3 class="line">UpDown</h3>
