--- a/About.html
+++ b/About.html
@@ -31,13 +31,11 @@
     <section class="bloc">
         <h2 class="subheading"><i class="far fa-laugh-beam"></i> About us</h2>
         <h4 style="padding:2%;">Hello , welcome to our site.
-            we are working alone to make this website possible to everyone. we are also working to publish with a domain and I'm searching For It. 
+            we are working alone to make this website possible to everyone. This is a Manpowered web site. Currently we are two working behind this website.
             Everything on this site made by us feel free to use.Anyways thank you for your support. If you can donate me to get a domaine go a head.Thank you.</h4>
 
-             <a href="https://paypal.me/VIshnugopy">
-            <center>
+             <a href="https://www.paypal.me/stupidversion">
                 <h3 class="btn" style="width:90%;">Donate via paypal</h3>
-            </center>
            </a>
 
     </section>
