--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                 </div>
                 <div class="detailes">
                     <h3 class="line">UpDown</h3>
-                    <h4>Put your phone on the floor facing upside and while doing push ups try to touch the screen with your nose.</h4>
+                    <h4>A Push Up app developed by our team</h4>
+                    <h4>To use it ; Put your phone on the floor facing upside and while doing push ups try to touch the screen with your nose.</h4>
                     <h4>Thank You for your feedbacks and shares</h4>
                     <a href="https://play.google.com/store/apps/details?id=vishnugopy.github.io.updown&hl=en">
                         <h3 class="btn">INSTALL</h3>
@@ -126,7 +127,8 @@
                 </div>
                 <div class="detailes">
                     <h3 class="line">Bigil</h3>
-                    <h4>Filter by Us</h4>
+                    <h4>Filter by Us , Take Selfies and share it to your friends on #Instagram</h4>
+                    <h4>Thank You for your feedbacks and shares</h4>
                     <a href="https://www.instagram.com/a/r/?effect_id=603678986832523">
                         <h3 class="btn">Try It</h3>
                     </a>
@@ -139,7 +141,8 @@
                 </div>
                 <div class="detailes">
                     <h3 class="line">Bigie</h3>
-                    <h4>Filter by Us</h4>
+                    <h4>Filter by Us , Take Selfies and share it to your friends on #Instagram</h4>
+                    <h4>Thank You for your feedbacks and shares</h4>
                     <a href="https://www.instagram.com/a/r/?effect_id=2431084013883394">
                         <h3 class="btn">Try It</h3>
                     </a>
@@ -169,6 +172,7 @@
                 <div class="detailes">
                     <h3 class="line">GOSTA Font</h3>
                     <h4>Only Capital Letters Will Support Keep In Mind</h4>
+                    <h4>Thank You for Downloading and your feedbacks and shares</h4>
                     <a href="Files/Gosta font.zip" download="GOSTA Font">
                         <h3 class="btn">Download</h3>
                     </a>
@@ -181,6 +185,7 @@
                 <div class="detailes">
                     <h3 class="line">KABAVI Font</h3>
                     <h4>Only Capital Letters Will Support Keep In Mind</h4>
+                    <h4>Thank You for Downloading and your feedbacks and shares</h4>
                     <a href="Files/KABAVI FONT.zip" download="KABAVI FONT">
                         <h3 class="btn">Download</h3>
                     </a>
@@ -193,6 +198,7 @@
                 <div class="detailes">
                     <h3 class="line">SuperStar</h3>
                     <h4>Only Capital Letters Will Support Keep In Mind</h4>
+                    <h4>Thank You for Downloading and your feedbacks and shares</h4>
                     <a href="Files/superstar-font.zip" download="SUPERSTAR ">
                         <h3 class="btn">Download</h3>
                     </a>
@@ -254,6 +260,7 @@
                 <div class="detailes">
                     <h3 class="line">Beard brush</h3>
                     <h4>Play with brush setting to get realistic hair look</h4>
+                    <h4>Thank You for Downloading and your feedbacks and shares</h4>
                     <a href="Files/Facial Hair For Beard.zip" download="Facial hair">
                         <h3 class="btn">Download</h3>
                     </a>
@@ -266,6 +273,7 @@
                 <div class="detailes">
                     <h3 class="line">Fogy brush</h3>
                     <h4>Play with brush setting to get realistic Cloud Look</h4>
+                    <h4>Thank You for Downloading and your feedbacks and shares</h4>
                     <a href="Files/Fogy Brush.zip" download="Fogy brush">
                         <h3 class="btn">Download</h3>
                     </a>
