--- a/djs.html
+++ b/djs.html
@@ -8,7 +8,7 @@
     <link href="darktheme.css" rel="stylesheet">
     <link href="responsive.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/SVS LOGO OFFICIAL.svg">
+    <link rel="icon" href="djthings/DJ S LOGO.png">
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
     <meta  name='viewport'  content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
 </head>
@@ -24,7 +24,10 @@
 
 
     <section class="namesection">
+        <div class="flexdj">
+        <img src="djthings/DJ S LOGO.png" alt="djlogo" class="djlogo">
         <h1>S and Sons DJ <br> and Transport</h1>
+        </div>
     </section>
 
 
@@ -45,10 +48,24 @@
             </div> 
         </div>
         <h4 class="pharagraphe">Hi there! We are tamil dj from Paris . Working more than an year and a half . Call us for every special day of your life and 
-            we will be happily there at a comptable cost. Before you hire us make sure to see all our equipments down below.</h4>
+            we will be happily there at a comptable cost. Before you hire us make sure to see all our equipments and more down below.</h4>
     </section>
-
-
+    <section class="djthings" >
+            <img src="djthings/1.jpg" alt="djthings">
+            <img src="djthings/2.jpg" alt="djthings">
+            <img src="djthings/3.png" alt="djthings">
+            <img src="djthings/4.jpg" alt="djthings">
+            <img src="djthings/5.jpg" alt="djthings">
+            <img src="djthings/6.jpg" alt="djthings">
+            <img src="djthings/7.jpg" alt="djthings">
+            <img src="djthings/8.jpg" alt="djthings">
+            <img src="djthings/9.jpg" alt="djthings">
+            <img src="djthings/10.jpg" alt="djthings">
+            <img src="djthings/11.jpg" alt="djthings">
+            <img src="djthings/12.jpg" alt="djthings">
+             
+    </section>
+    
 
 
 
