--- a/index.html
+++ b/index.html
@@ -69,22 +69,6 @@
 
             <div class="sale">
                 <div class="pot">
-                    <img class="log" src="images/jumpie.png">
-                    <img class="getonplay" src="images/gps.png" alt="getiton" >
-                </div>
-                <div class="detailes">
-                    <h3 class="line">Jumpie </h3>
-                    <h4>A casual game developed with #buildbox</h4>
-                    <h4>Thank You for your feedbacks and shares</h4>
-                    <a href="https://play.google.com/store/apps/details?id=com.stupidversion.jumpie">
-                        <h3 class="btn">INSTALL</h3>
-                    </a>
-                </div>
-            </div>
-
-
-            <div class="sale">
-                <div class="pot">
                     <img class="log" src="images/jumpie 2.png">
                     <img class="getonplay" src="images/gps.png" alt="getiton" >
                 </div>
@@ -93,6 +77,22 @@
                     <h4>A casual game developed with #buildbox</h4>
                     <h4>Thank You for your feedbacks and shares</h4>
                     <a href="https://play.google.com/store/apps/details?id=com.stupidversion.jumpie2">
+                        <h3 class="btn">INSTALL</h3>
+                    </a>
+                </div>
+            </div>
+
+
+            <div class="sale">
+                <div class="pot">
+                    <img class="log" src="images/jumpie.png">
+                    <img class="getonplay" src="images/gps.png" alt="getiton" >
+                </div>
+                <div class="detailes">
+                    <h3 class="line">Jumpie </h3>
+                    <h4>A casual game developed with #buildbox</h4>
+                    <h4>Thank You for your feedbacks and shares</h4>
+                    <a href="https://play.google.com/store/apps/details?id=com.stupidversion.jumpie">
                         <h3 class="btn">INSTALL</h3>
                     </a>
                 </div>
@@ -137,7 +137,7 @@
 
             <div class="sale">
                 <div class="pot">
-                    <img class="log" src="images/bighead.png">
+                    <img class="log" src="images/bighead.jpg">
                 </div>
                 <div class="detailes">
                     <h3 class="line">Bigie</h3>
