--- a/About.html
+++ b/About.html
@@ -11,13 +11,12 @@
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
     <meta  name='viewport'  content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
 </head>
-<div id="mainbar"  class="main-bar">
-    <a href="index.html"><i class="fas fa-home"></i></a>
-    <a href="wallpapers.html"><i class="fas fa-mobile"></i></a>
-    <a href="djs.html"><i class="far fa-play-circle"></i></a>
-    <a href="About.html"><i class="far fa-user-circle"></i></a>
-    
-</div>
+<header id="mainbar"  class="main-bar">
+    <a href="index.html"><i  class="tapbut fas fa-home"></i></a>
+    <a href="wallpapers.html"><i class="tapbut fas fa-mobile"></i></a>
+    <a href="djs.html"><i class="tapbut far fa-play-circle"></i></a>
+    <a href="About.html"><i  style="color:#3CA2C8;" class="tapbut far fa-user-circle"></i></a> 
+</header>
 
 <body>
 
@@ -43,10 +42,10 @@
     <section class="bloc">
         <h2 class="subheading"><i class="far fa-share-square"></i> You Can Find Us On</h2>
         <div class="social">
-            <a class="mail" href="mailto:stupidversion@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-            <a class="play" href="https://play.google.com/store/apps/dev?id=7891379765966516089"><i class="fab fa-google-play"></i></a>
-            <a class="insta" href="https://www.instagram.com/stupid_version_studio/"><i class="fab fa-instagram"></i></a>
-            <a class="twitter" href="https://twitter.com/VersionStupid"><i class="fab fa-twitter"></i></a>
+            <a class="mail" href="mailto:stupidversion@gmail.com"><i class=" socialicon fa fa-envelope" aria-hidden="true"></i></a>
+            <a class="play" href="https://play.google.com/store/apps/dev?id=7891379765966516089"><i class=" socialicon fab fa-google-play"></i></a>
+            <a class="insta" href="https://www.instagram.com/stupid_version_studio/"><i class=" socialicon fab fa-instagram"></i></a>
+            <a class="twitter" href="https://twitter.com/VersionStupid"><i class=" socialicon fab fa-twitter"></i></a>
         </div>
     </section>
 
