--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     <meta  name='viewport'  content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
 </head>
 <div id="mainbar"  class="main-bar">
-    <a href="index.html"><i class="fas fa-home"></i></a>
-    <a href="wallpapers.html"><i class="fas fa-mobile"></i></a>
-    <a href="djs.html"><i class="far fa-play-circle"></i></a>
-    <a href="About.html"><i class="far fa-user-circle"></i></a>
-    
+    <a href="index.html"><i style="color:#3CA2C8;" class="tapbut fas fa-home"></i></a>
+    <a href="wallpapers.html"><i class="tapbut fas fa-mobile"></i></a>
+    <a href="djs.html"><i class="tapbut far fa-play-circle"></i></a>
+    <a href="About.html"><i class="tapbut far fa-user-circle"></i></a> 
 </div>
 
 <body>
