--- a/djs.html
+++ b/djs.html
@@ -12,19 +12,19 @@
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
     <meta  name='viewport'  content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
 </head>
-<div id="mainbar"  class="main-bar">
-    <a href="index.html"><i class="fas fa-home"></i></a>
-    <a href="wallpapers.html"><i class="fas fa-mobile"></i></a>
-    <a href="djs.html"><i class="far fa-play-circle"></i></a>
-    <a href="About.html"><i class="far fa-user-circle"></i></a>
-    
-</div>
+<header id="mainbar"  class="main-bar">
+    <a href="index.html"><i  class="tapbut fas fa-home"></i></a>
+    <a href="wallpapers.html"><i class="tapbut fas fa-mobile"></i></a>
+    <a href="djs.html"><i style="color:#3CA2C8;" class="tapbut far fa-play-circle"></i></a>
+    <a href="About.html"><i class="tapbut far fa-user-circle"></i></a> 
+</header>
+
 
 <body>
 
 
     <section class="namesection">
-        <div class="flexdj">
+        <div class="flex">
         <img src="djthings/DJ S LOGO.png" alt="djlogo" class="djlogo">
         <h1>S and Sons DJ <br> and Transport</h1>
         </div>
