--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <div class="sale">
                 <div class="pot">
-                    <img class="log" src="images/rc logo.png">
+                    <img class="log" src="images/RC.png">
                     <img class="getonplay" src="images/gps.png" alt="getiton" >
                 </div>
                 <div class="detailes">
@@ -53,7 +53,7 @@
             
             <div class="sale">
                 <div class="pot">
-                    <img class="log" src="images/durruk.jpg">
+                    <img class="log" src="images/durruk.png">
                     <img class="getonplay" src="images/gps.png" alt="getiton" >
                 </div>
                 <div class="detailes">
