--- a/About.html
+++ b/About.html
@@ -9,67 +9,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/SVS LOGO OFFICIAL.svg">
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
-    <meta  name='viewport'  content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
 </head>
-<header id="mainbar"  class="main-bar">
-    <a href="index.html"><i  class="tapbut fas fa-home"></i></a>
+<header id="mainbar" class="main-bar">
+    <a href="index.html"><i class="tapbut fas fa-home"></i></a>
     <a href="wallpapers.html"><i class="tapbut fas fa-mobile"></i></a>
     <a href="djs.html"><i class="tapbut far fa-play-circle"></i></a>
-    <a href="About.html"><i  style="color:#3CA2C8;" class="tapbut far fa-user-circle"></i></a> 
+    <a href="About.html"><i style="color:#3CA2C8;" class="tapbut far fa-user-circle"></i></a>
 </header>
 
 <body>
-
-    <section id="namesection" class="namesection">
-        <h1 id="header" >Stupid Version Studio</h1>
-    </section>
-
-
+    <section class="coversection">
+        <section id="namesection" class="namesection">
+            <h1 id="header">Stupid Version Studio</h1>
+        </section>
 
 
-    <section class="bloc">
-        <h2 class="subheading"><i class="far fa-laugh-beam"></i> About us</h2>
-        <h4 style="padding:2%;">Hello , welcome to our site.
-            we are working alone to make this website possible to everyone. This is a Manpowered web site. Currently we are two working behind this website.
-            Everything on this site made by us feel free to use.Anyways thank you for your support. If you can donate me to get a domaine go a head.Thank you.</h4>
 
-             <a href="https://www.paypal.me/stupidversion">
+
+        <section class="bloc">
+            <h2 class="subheading"><i class="far fa-laugh-beam"></i> About us</h2>
+            <h4 style="padding:2%;">Hello , welcome to our site.
+                we are working alone to make this website possible to everyone. This is a Manpowered web site. Currently
+                we are two working behind this website.
+                Everything on this site made by us feel free to use.Anyways thank you for your support. If you can
+                donate me to get a domaine go a head.Thank you.</h4>
+
+            <a href="https://www.paypal.me/stupidversion">
                 <h3 class="btn" style="width:90%;">Donate via paypal</h3>
-           </a>
+            </a>
 
+        </section>
+
+        <section class="bloc">
+            <h2 class="subheading"><i class="far fa-share-square"></i> You Can Find Us On</h2>
+            <div class="social">
+                <a class="mail" href="mailto:stupidversion@gmail.com"><i class=" socialicon fa fa-envelope"
+                        aria-hidden="true"></i></a>
+                <a class="play" href="https://play.google.com/store/apps/dev?id=7891379765966516089"><i
+                        class=" socialicon fab fa-google-play"></i></a>
+                <a class="insta" href="https://www.instagram.com/stupid_version_studio/"><i
+                        class=" socialicon fab fa-instagram"></i></a>
+                <a class="twitter" href="https://twitter.com/VersionStupid"><i
+                        class=" socialicon fab fa-twitter"></i></a>
+            </div>
+        </section>
+
+
+        <video controls>
+
+
+            <source src="https://www.youtube.com/embed/p4_AmyndTcA" type="video/link">
+
+            <source src="videos/STUPID.mp4" type="video/mp4">
+
+
+
+            Sorry, your browser doesn't support embedded videos.
+        </video>
+
+        <footer>
+            <a href="https://www.instagram.com/stupid_version_studio/">
+                <h3>&copy;Stupid Version Studio</h3>
+            </a>
+
+        </footer>
     </section>
-
-    <section class="bloc">
-        <h2 class="subheading"><i class="far fa-share-square"></i> You Can Find Us On</h2>
-        <div class="social">
-            <a class="mail" href="mailto:stupidversion@gmail.com"><i class=" socialicon fa fa-envelope" aria-hidden="true"></i></a>
-            <a class="play" href="https://play.google.com/store/apps/dev?id=7891379765966516089"><i class=" socialicon fab fa-google-play"></i></a>
-            <a class="insta" href="https://www.instagram.com/stupid_version_studio/"><i class=" socialicon fab fa-instagram"></i></a>
-            <a class="twitter" href="https://twitter.com/VersionStupid"><i class=" socialicon fab fa-twitter"></i></a>
-        </div>
-    </section>
-
-
-    <video controls >
-
-
-        <source src="https://www.youtube.com/embed/p4_AmyndTcA"
-                type="video/link">
-
-        <source src="videos/STUPID.mp4"
-                type="video/mp4">
-
-       
-    
-        Sorry, your browser doesn't support embedded videos.
-    </video>
-
-
 </body>
-<footer>
-    <a href="https://www.instagram.com/stupid_version_studio/">
-        <h3>&copy;Stupid Version Studio</h3>
-    </a>
 
-</footer>
+
 </html>
