--- a/wallpapers.html
+++ b/wallpapers.html
@@ -110,6 +110,35 @@
                 </a>
             </div>
 
+            <div class="wpbloc">
+                <img src="wp/12.png" alt="WP">
+                <a href="wp/12.png" download="wp12">
+                    <h3 class="btn">Download</h3>
+                </a>
+            </div>
+
+
+            <div class="wpbloc">
+                <img src="wp/13.png" alt="WP">
+                <a href="wp/13.png" download="wp13">
+                    <h3 class="btn">Download</h3>
+                </a>
+            </div>
+            
+            <div class="wpbloc">
+                <img src="wp/14.png" alt="WP">
+                <a href="wp/14.png" download="wp14">
+                    <h3 class="btn">Download</h3>
+                </a>
+            </div>
+                        
+            <div class="wpbloc">
+                <img src="wp/15.png" alt="WP">
+                <a href="wp/15.png" download="wp15">
+                    <h3 class="btn">Download</h3>
+                </a>
+            </div>
+
 
 
         </section>
