--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
 
         </section>
 
+
+        <section class="bloc">
+            <h2 class="subheading"><i class="fas fa-shapes"></i> 3D Models</h2>
+
+            <iframe class="models" width="100%" height="auto" src="https://poly.google.com/view/9KrjaH_h0CP/embed" frameborder="0" style="border:none;" allowvr="yes" allow="vr; xr; accelerometer; magnetometer; gyroscope; autoplay;" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="" ></iframe>
+           
+
+        </section>
+
         <section class="bloc">
             <h2 class="subheading"><i class="fab fa-instagram"></i>  Instagram Filters</h2>
 
